css tweaks to align with project designer (+fix)

--- a/style/common.css
+++ b/style/common.css
@@ -345,6 +345,16 @@ table.list tr:hover td._name {
 /*
  * These are the colors/formats for the tasks that are on time, overdue, etc.
  */
+td.future {
+    background-color:#ffffff;
+    border-style:solid;
+    border-width:1px
+}
+tr.future td._date, tr.future td._datetime, tr.future td._duration, tr.future td._in {
+    background-color:#ffffff;
+    color:#00000;
+}
+
 td.done {
     background-color:#aaddaa;
     border-style:solid;
